--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Agesa Görsel Analiz Simülatörü</title>
+<title>Görsel Analiz Simülatörü</title>
 
 <style>
   /* GENEL AYARLAR ve LACİVERT TEMA */
